# stock_monitor

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  stock_monitor.py
.github/workflows/: ci.yml
tests/: test_import.py
