[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_monitor"
version = "0.1.0"
description = "Poll stock API and expose Prometheus metrics"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "", email = "" } ]
dependencies = [
    "requests>=2.25.1",
    "prometheus_client>=0.9.0",
]
